--- a/mobile.html
+++ b/mobile.html
@@ -10,31 +10,36 @@
     <link rel="stylesheet" href="style.css">
 
     <style>
-      /* ===== Mobilní navigace ===== */
+      /* ===== Navigace ===== */
       header {
         position: fixed;
         top: 0; left: 0; right: 0;
+        width: 100%;
         height: 68px;
-        background: rgba(255,255,255,0.92);
+        background: rgba(255,255,255,0.96);
         backdrop-filter: blur(12px);
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding: 0 18px;
-        z-index: 999;
-        border-bottom: 1px solid rgba(0,0,0,0.06);
+        padding: 0 16px;
+        z-index: 9999;
+        border-bottom: 1px solid rgba(0,0,0,0.1);
       }
-
       header .brand {
         font-weight: 800;
         font-size: 18px;
         color: var(--dark);
+        white-space: nowrap;
       }
-
-      .menu-toggle {
-        font-size: 26px;
+      .header-actions {
+        display: flex;
+        align-items: center;
+        gap: 8px;
+      }
+      .moon-btn, .lang-btn, .menu-toggle {
         background: transparent;
         border: none;
+        font-size: 20px;
         cursor: pointer;
         color: var(--dark);
       }
@@ -44,61 +49,39 @@
         top: 68px;
         left: 0;
         right: 0;
-        background: rgba(255,255,255,0.96);
-        backdrop-filter: blur(8px);
+        background: var(--card);
         transform: translateY(-100%);
-        transition: transform 0.35s ease;
-        z-index: 998;
+        transition: transform .35s ease;
+        z-index: 9998;
+        box-shadow: 0 6px 20px rgba(0,0,0,.1);
       }
-
       nav.open { transform: translateY(0); }
-
       nav ul {
         list-style: none;
         margin: 0;
-        padding: 14px 0;
+        padding: 12px 0;
         display: flex;
         flex-direction: column;
-        text-align: center;
-        gap: 10px;
+        gap: 8px;
       }
-
-      nav ul li a {
+      nav li a {
+        display: block;
+        text-align: center;
+        padding: 10px 0;
         text-decoration: none;
         color: var(--dark);
         font-weight: 600;
-        display: block;
-        padding: 10px;
-        transition: background .25s ease;
       }
-
-      nav ul li a:hover { background: rgba(0,0,0,0.05); }
-
-      .header-actions {
-        display: flex;
-        align-items: center;
-        gap: 10px;
-      }
-
-      .moon-btn, .lang-btn {
-        background: transparent;
-        border: none;
-        font-size: 18px;
-        cursor: pointer;
-        color: var(--dark);
-      }
+      nav li a:hover { background: rgba(0,0,0,0.05); }
 
       /* ===== Obsah ===== */
-      main {
-        padding-top: 90px;
-        padding-inline: 14px;
-      }
-
-      .hero { display: flex; flex-direction: column; gap: 14px; margin-bottom: 30px; }
+      main { padding-top: 90px; padding-inline: 14px; }
+      .hero { display: flex; flex-direction: column; gap: 12px; margin-bottom: 28px; }
       .buttons { display: flex; gap: 10px; flex-wrap: wrap; }
+      .card { margin-top: 10px; }
 
-      .slider-wrap { margin-top: 12px; }
-      .slider { width: 100%; border-radius: 10px; overflow: hidden; }
+      /* Obrázky a slideshow */
+      .wide-carousel img { width: 100%; border-radius: 10px; }
 
       /* Formulář */
       form input, form textarea {
@@ -112,15 +95,18 @@
       /* Patička */
       footer {
         text-align: center;
-        padding: 30px 14px;
+        padding: 28px 10px;
         font-size: 13px;
         color: var(--muted);
       }
 
-      /* Na desktopu se mobilní verze neschová */
-      @media (min-width: 769px) {
-        header, nav { display: none; }
+      body.dark header {
+        background: rgba(20,20,25,0.9);
+        color: #fff;
       }
+      body.dark nav { background: rgba(25,25,30,0.96); }
+      body.dark nav li a { color: #f0f0f0; }
+      body.dark .moon-btn, body.dark .lang-btn, body.dark .menu-toggle { color: #fff; }
     </style>
   </head>
 
@@ -145,6 +131,7 @@
     </nav>
 
     <main>
+      <!-- Odstraněna horní slideshow kvůli výkonu -->
       <section class="hero">
         <h1>Autodoprava Deniska — profesionální přeprava osob a transfery</h1>
         <p>Diskrétní a spolehlivé služby přepravy: transfery na letiště, osobní přepravy mezi městy, pronájem vozidla s řidičem pro svatby a oslavy nebo přeprava menšího nákladu. Moderní vozový park a zkušený řidič — komfort, bezpečí a přesnost.</p>
@@ -152,7 +139,6 @@
           <a class="cta primary-btn" href="#kontakt">Objednat transfer</a>
           <a class="cta secondary-btn" href="#cenik">Zobrazit ceník</a>
         </div>
-
         <div class="card">
           <strong>Rychlá hotline</strong>
           <p class="muted">Tel: +420 777 135 004 / +420 776 135 001</p>
@@ -173,8 +159,7 @@
 
       <section id="cenik">
         <h2>Ceník (orientační)</h2>
-        <p class="muted">Níže uvedené ceny jsou reprezentativním příkladem. Ceny jsou smluvní a mohou se lišit podle konkrétní objednávky. Všechny ceny jsou uvedeny bez DPH.</p>
-
+        <p class="muted">Níže uvedené ceny jsou reprezentativním příkladem...</p>
         <div class="pricing">
           <div class="card price-table">
             <strong>Osobní vůz: Škoda Kodiaq (max 4 osoby)</strong>
@@ -182,38 +167,24 @@
             <div class="price-row"><div>Brno – Vídeň</div><div><strong>3 600 Kč</strong></div></div>
             <div class="price-row"><div>Brno – Praha</div><div><strong>4 500 Kč</strong></div></div>
           </div>
-
           <div class="card price-table">
             <strong>Minivan: Mercedes třídy V (max 6 osob)</strong>
             <div class="price-row"><div>Brno – Bratislava</div><div><strong>4 500 Kč</strong></div></div>
             <div class="price-row"><div>Brno – Vídeň</div><div><strong>4 500 Kč</strong></div></div>
             <div class="price-row"><div>Brno – Praha</div><div><strong>5 850 Kč</strong></div></div>
           </div>
-
-          <div class="card price-table">
-            <strong>Pronájem vozidla s řidičem (svatby, oslavy)</strong>
-            <div class="price-row"><div>Základní sazba</div><div><strong>3 000 Kč / hod</strong></div></div>
-            <div class="price-row"><div>V ceně zahrnuto</div><div class="muted">paušál 50 km za každou započatou hodinu</div></div>
-            <div class="price-row"><div>Čekání</div><div><strong>400 Kč / hod</strong></div></div>
-            <div class="price-row"><div>Každá další započatá hodina</div><div><strong>1 500 Kč</strong></div></div>
-            <div class="muted">Ceny zahrnují poplatky za parkování a případné vjezdy na letiště.</div>
-          </div>
         </div>
       </section>
 
       <section id="vozovy-park">
         <h2>Vozový park</h2>
-        <p class="muted">Pečlivě udržované vozy od standardních osobních až po minivany pro skupiny. Všechny vozy jsou pojištěné a pravidelně kontrolované.</p>
-        <div class="wide-carousel" aria-label="Vozový park - carousel">
+        <p class="muted">Pečlivě udržované vozy od standardních osobních až po minivany pro skupiny.</p>
+        <div class="wide-carousel">
           <div class="wc-track" id="wc-track">
-            <div class="wc-item"><img src="assets/IMG_3125.webp" alt="Vůz 1"></div>
-            <div class="wc-item"><img src="assets/IMG_3126.webp" alt="Vůz 2"></div>
-            <div class="wc-item"><img src="assets/IMG_3127.webp" alt="Vůz 3"></div>
-            <div class="wc-item"><img src="assets/IMG_3128.webp" alt="Vůz 4"></div>
-            <div class="wc-item"><img src="assets/IMG_3129.webp" alt="Vůz 5"></div>
+            <div class="wc-item"><img loading="lazy" src="assets/IMG_3125.webp" alt="Vůz 1"></div>
+            <div class="wc-item"><img loading="lazy" src="assets/IMG_3126.webp" alt="Vůz 2"></div>
+            <div class="wc-item"><img loading="lazy" src="assets/IMG_3127.webp" alt="Vůz 3"></div>
           </div>
-          <button class="wc-btn prev" id="wc-prev">◀</button>
-          <button class="wc-btn next" id="wc-next">▶</button>
         </div>
       </section>
 
@@ -235,17 +206,16 @@
 
     <footer>
       <div>© Autodoprava Deniska — Všechna práva vyhrazena</div>
-      <div class="muted">IČO: 09235787 • DIČ: CZ7409214065 • Ceny jsou smluvní, tento ceník je orientační.</div>
+      <div class="muted">IČO: 09235787 • DIČ: CZ7409214065 • Ceny jsou smluvní.</div>
     </footer>
 
     <script src="script.js"></script>
     <script>
+      // Rozbalovací menu
       const menuBtn=document.getElementById("menuBtn");
       const mobileMenu=document.getElementById("mobileMenu");
       menuBtn.addEventListener("click",()=>mobileMenu.classList.toggle("open"));
-      document.querySelectorAll("#mobileMenu a").forEach(link=>{
-        link.addEventListener("click",()=>mobileMenu.classList.remove("open"));
-      });
+      document.querySelectorAll("#mobileMenu a").forEach(a=>a.addEventListener("click",()=>mobileMenu.classList.remove("open")));
     </script>
   </body>
 </html>
