--- a/mobile.html
+++ b/mobile.html
@@ -31,9 +31,9 @@
       /* Main layout */
       main{max-width:1100px;margin:0 auto;padding:88px 14px 24px}
       section{margin-bottom:28px}
-      h1{font-size:20px;margin:0 0 10px}
+      h1{font-size:20px;margin:0 0 100px}
       h2{font-size:18px;margin:0 0 6px}
-      .muted{color:var(--muted);font-size:14px}
+      .muted{color:black(--muted);font-size:14px}
       .buttons{display:flex;gap:10px;flex-wrap:wrap;margin:8px 0 6px}
       a.cta{display:inline-block;font-weight:700;font-size:14px;padding:10px 16px;border-radius:12px;text-decoration:none;cursor:pointer}
       .primary-btn{color:#fff;background:linear-gradient(135deg,#b584ec,#3d7ed3);box-shadow:0 6px 18px rgba(0,123,255,.25)}
