--- a/mobile.html
+++ b/mobile.html
@@ -54,7 +54,7 @@
       .wide-carousel{position:relative;overflow:hidden;border-radius:12px}
       .wc-track{display:flex;width:100%;transition:transform .6s cubic-bezier(.22,.9,.26,1)}
       .wc-item{min-width:100%}
-      .wc-item img{width:100%;height:220px;object-fit:cover;display:block;border-radius:12px}
+      .wc-item img{width:100%;height:220px;object-fit:contain;display:block;border-radius:12px;background-color: #000}
 
       /* Contact form */
       .contact-grid{display:grid;grid-template-columns:1fr;gap:12px}
